<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_weight="1.5"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/providerUsingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginRight="5dp"
                android:text="@string/currently_using"/>
            <TextView
                android:id="@+id/providerNameDisplayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/provider_placeholder"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/providerUsingText"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/providerExampleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:text="@string/available" />
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/providerExampleWrapper"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/providerExampleText">
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="fill_parent"
        android:layout_height="0px">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/speedLabel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/defaultSpeed"
                android:textSize="60sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/speedLabel"
                android:layout_alignBaseline="@id/speedLabel"
                android:text="@string/velocityMeasurement"
                android:textSize="30sp"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="3"
        android:layout_width="fill_parent"
        android:layout_height="0px">
        <ImageView
            android:id="@+id/providerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/inactive" />
    </RelativeLayout>

</LinearLayout>
